--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="intro" data-aos="fade-right" data-aos-delay="150">
               <div class="eyebrow d-inline-flex align-items-center gap-2 mb-3">
                 <span class="dot"></span>
-                <span class="text">Front-end Developer | Project Manager</span>
+                <span class="text">Full-Stack | Project Manager</span>
               </div>
               <br>
               <div class="eyebrow d-inline-flex align-items-center gap-2 mb-3">
@@ -97,7 +97,7 @@
               </h1>
 
               <p class="lead mb-4">
-                Soy desarrolladora enfocada en Front-End y gestión de proyectos, con experiencia en el diseño de
+                Soy desarrolladora enfocada en Full-Stack y gestión de proyectos, con experiencia en el diseño de
                 interfaces, APIs REST, modelado 3D y prototipos tecnológicos. Mi objetivo es transformar ideas en
                 soluciones digitales funcionales y accesibles.
               </p>
@@ -159,7 +159,7 @@
                   Actualmente me especializo en el desarrollo de interfaces web intuitivas y en la gestión de proyectos tecnológicos. He participado en proyectos que abarcan desde plataformas colaborativas y sistemas CRUD hasta APIs REST y prototipos IoT, lo que me ha permitido integrar habilidades técnicas con visión estratégica.
               </p>
               <p>
-                Mi objetivo es seguir creciendo en el área de desarrollo front-end mientras fortalezco mi perfil como Project Manager, aplicando metodologías ágiles y liderazgo colaborativo para impulsar proyectos innovadores que generen impacto positivo.
+                Mi objetivo es seguir creciendo en el área de desarrollo Full-Stack mientras fortalezco mi perfil como Project Manager, aplicando metodologías ágiles y liderazgo colaborativo para impulsar proyectos innovadores que generen impacto positivo.
               </p>
 
               <div class="cta-group">
@@ -274,12 +274,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">HTML | CSS</h3>
-                <span class="skill-badge">Expert</span>
               </header>
               <p class="skill-desc">Desarrollo de interfaces web responsivas y accesibles.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
 
@@ -287,12 +283,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">JavaScript</h3>
-                <span class="skill-badge">Pro</span>
               </header>
               <p class="skill-desc">Interactividad en páginas web, integración con APIs REST.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
 
@@ -300,12 +292,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">React</h3>
-                <span class="skill-badge">Advanced</span>
               </header>
               <p class="skill-desc">Construcción de aplicaciones SPA escalables y dinámicas.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
         </div><!-- End Skill Row 1 -->
@@ -315,12 +303,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">C# | APIs REST</h3>
-                <span class="skill-badge">Advanced</span>
               </header>
               <p class="skill-desc">Diseño e implementación de endpoints y conectividad con MySQL.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
 
@@ -328,12 +312,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">MySQL | SQL</h3>
-                <span class="skill-badge">Strong</span>
               </header>
               <p class="skill-desc">Diseño, consultas y administración de bases de datos relacionales.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
 
@@ -341,12 +321,8 @@
             <article class="skill-block skills-animation">
               <header class="d-flex align-items-center justify-content-between mb-2">
                 <h3 class="skill-title">Project Management (Scrum | Kanban)</h3>
-                <span class="skill-badge">Strong</span>
               </header>
               <p class="skill-desc">Planificación, liderazgo y gestión de equipos con metodologías ágiles.</p>
-              <div class="progress slim">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
             </article>
           </div>
         </div><!-- End Skill Row 2 -->
